	MSN:
	* Added support for MSNP16, including Multiple Points of Presence (MPOP)
	  which allows multiple simultaneous sign-ins.
	* Added extended capabilities support (none implemented).
	* Merged the work done on the Google SoC (major rewrite of SLP code)
	* Reworked the data transfer architecture.
	  (http://developer.pidgin.im/wiki/SlpArchitecture)
	* Lots of little changes.

version 2.7.5 (10/31/2010):
	General:
	* Added Verisign Class 3 Public CA - G2 root CA.

	Pidgin:
	* Properly differentiate between bn and bn_IN in the Translation
	  Information dialog.

	AIM and/or ICQ:
	* Display the "Authorize buddy?" minidialog when the requestor has an
	  empty nickname. (#12810)
	* New ICQ accounts default to proper ICQ servers.  Old accounts using one
	  of the old default servers will be silently migrated to use the proper
	  servers.
	* ICQ accounts using clientLogin now use the correct ICQ servers.  This is
	  separate from the server settings mentioned above.
	* '<' should no longer cause ICQ status messages to be truncated in some
	  locations. (#11964, #12593)
	* Fix sending messages to chat rooms. (#12768)

	Bonjour:
	* Don't crash when attempting to log into a Bonjour account and init
	  failed.

	Windows-Specific Changes:
	* Quote the path stored in the registry when the "run at startup" option
	  in the Windows Pidgin Options plugin is used. (#12781)

version 2.7.4 (10/20/2010):
	General:
	* Fix search path for Tk when compiling on Debian Squeeze. (#12465)
	* purple-remote now expects and produces UTF-8. (Guillaume Brunerie)
	  (#12049)
	* Add Deutsche Telekom, Thawte Primary, and Go Daddy Class 2 root CAs
	  (#12667, #12668, and #12594)
	* Fix CVE-2010-3711 by properly validating return values from the
	  purple_base64_decode() function before using them.
	* Fix two local crash bugs by properly validating return values from the
	  purple_base16_decode() function before using them.

	libpurple: